prima pagina web

--- a/primo_doc_html/index.html
+++ b/primo_doc_html/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Salvador Dalì</h1>
 
-
+<!-- TITOLO DI PRIMO LIVELLO! -->
 
     <p>Salvador Dalí, Marchese di Pùbol, all'anagrafe Salvador Domingo Felipe Jacinto Dalí i Domènech (<a href="https://it.wikipedia.org/wiki/Figueres">Figueres</a>, 11 maggio 1904 - Figueres, 23 gennaio 1989), è stato un pittore, scultore, scrittore, fotografo, cineasta, designer e sceneggiatore spagnolo.</p>
 
@@ -40,6 +40,8 @@
 
     <p>Nel 1922 Dalí andò a vivere nella Residencia de Estudiantes di Madrid[9] e studiò all'Academia de San Fernando (Accademia di belle arti). Dalí attirava già interesse su di sé con i suoi modi da eccentrico dandy. Portava i capelli e le basette lunghe, si vestiva con giacche, calze lunghe e calzoni alla zuava come gli esteti britannici della fine del XIX secolo. Erano però i suoi dipinti, nei quali mostrava di accostarsi al cubismo,  <img src="Man_Ray_Salvador_Dali.jpg" alt="Salvador Dalì e Man Ray" title="Salvador Dalì e Man Ray" width="100"> a guadagnargli l'attenzione dei suoi compagni di corso. Nei suoi primi lavori Dalí probabilmente non aveva ancora compreso pienamente i concetti del movimento cubista, poiché all'epoca a Madrid non esistevano aderenti al movimento, e le uniche informazioni di cui disponeva provenivano da articoli di giornale e da un catalogo datogli da Ramon Pichot.</p>
 
+    <!-- L'immagine in questo paragrafo non manda a capo, perché l'immagine è un elemento IN LINE. Rimane in linea col testo -->
+
     <p>Nel 1924 l'ancora sconosciuto Salvador Dalí realizzò per la prima volta illustrazioni per un libro, l'edizione in catalano del poema Les bruixes de Llers del suo amico e compagno di studi Carles Fages de Climent.</p>
 
     <p>Dalí si accostò anche al movimento dadaista, che lo influenzò per tutta la sua vita. Alla Residencia diventò intimo amico di Pepín Bello, di Luis Buñuel e di Federico García Lorca. L'amicizia con García Lorca era un autentico trasporto amoroso reciproco[16], anche se Dalí respinse vigorosamente gli approcci erotici del poeta[17].</p>
@@ -59,6 +61,13 @@
         <li>Cadaqués (1917)</li>
     </ol> 
 
+    <!-- OL: lista ordinata (numeri), UL: lista non ordinata (punti). 
+    ogni elemento della lista va racchiuso in un tag LI -->
+
+    <img src="Man_Ray_Salvador_Dali.jpg" alt="Salvador Dalì e Man Ray" title="Salvador Dalì e Man Ray" width="100">
+
+    
+    
 
 </body>
 </html>
