--- a/layout_flexbox/index.html
+++ b/layout_flexbox/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <header>
@@ -34,14 +35,18 @@
     <main>
 
         <div id="hero">
-            <img src="https://source.unsplash.com/1200x700/?vienna+prater" alt="">
+           <div class="callToAction">
+               <h1>Lorem, ipsum dolor.</h1>
+               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur, voluptates.</p>
+               <a href="#" class="button">Daje!</a>
+           </div>
         </div>
 
         <div id="offerte">
             <!-- inizio box offerta -->
             <div class="offerta">
                 <div class="offertaImg">
-                    <img src="https://source.unsplash.com/400x300/?honolulu" alt="">
+                    <img src="https://source.unsplash.com/400x200/?honolulu" alt="">
                 </div>
 
                 <div class="offertaTesto">
@@ -56,7 +61,7 @@
 
             <div class="offerta">
                 <div class="offertaImg">
-                    <img src="https://source.unsplash.com/400x300/?dubai" alt="">
+                    <img src="https://source.unsplash.com/400x200/?dubai" alt="">
                 </div>
                 <div class="offertaTesto">
                     <h2>Lorem, ipsum dolor.</h2>
@@ -71,7 +76,7 @@
              <!-- inizio box offerta -->
             <div class="offerta">
                 <div class="offertaImg">
-                    <img src="https://source.unsplash.com/400x300/?san+diego" alt="">
+                    <img src="https://source.unsplash.com/400x200/?san+diego" alt="">
                 </div>
                 <div class="offertaTesto">
                     <h2>Lorem, ipsum dolor.</h2>
@@ -123,7 +128,7 @@
 
     </main>
 
-    <footer>Lorem, ipsum dolor.</footer>
+    <footer id="mainFooter">©2022 FOOTER. Lorem, ipsum dolor.</footer>
 
 
 </body>
