--- a/bootstrap_intro/index.html
+++ b/bootstrap_intro/index.html
@@ -23,7 +23,9 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
         <!-- QUI SOTTO POSSO INSERIRE UN LOGO -->
-          <a class="navbar-brand" href="#"><img src="img/logo.png" class="logo" alt="LOGO"></a>
+          <a class="navbar-brand" href="#">
+            <img src="img/logo.png" class="logo" alt="LOGO">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -194,7 +196,7 @@
     <div class="container">COOKIE POLICY | CONTATTI | DISCLAIMER</div>
 </footer> 
 
-<!-- CONTENUTO DELLA FINESTRA MODAL -->
+<!------ CONTENUTO DELLA FINESTRA MODAL ------->
 
 <div class="modal fade" id="articoloModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
