--- a/bs_cart/index.html
+++ b/bs_cart/index.html
@@ -104,12 +104,12 @@
             <div class="row mb-4 d-flex justify-content-between align-items-center">
               <div class="col-lg-2">
                 <img
-                  src="img/strokes.jpg"
+                  src="img/alicia.jpg"
                   class="img-fluid rounded-3 w-100 mb-3" alt="vinile">
               </div>
               <div class="col-7 col-lg-3 col-xl-3">
-                <h6 class="text-muted">Vinile</h6>
-                <h6 class="text-black mb-0">The New Abnormal</h6>
+                <h6 class="text-muted">Alicia Keys</h6>
+                <h6 class="text-black mb-0">Alicia</h6>
               </div>
               <div class="col-3 col-md-3 col-lg-3 d-flex">
                 <button class="btn btn-link px-2"
@@ -139,12 +139,12 @@
             <div class="row mb-4 d-flex justify-content-between align-items-center">
               <div class="col-lg-2">
                 <img
-                  src="img/strokes.jpg"
+                  src="img/radiohead.jpg"
                   class="img-fluid rounded-3 w-100 mb-3" alt="vinile">
               </div>
               <div class="col-7 col-lg-3 col-xl-3">
-                <h6 class="text-muted">Vinile</h6>
-                <h6 class="text-black mb-0">The New Abnormal</h6>
+                <h6 class="text-muted">Radiohead</h6>
+                <h6 class="text-black mb-0">OK Computer</h6>
               </div>
               <div class="col-3 col-md-3 col-lg-3 d-flex">
                 <button class="btn btn-link px-2"
