--- a/sass_intro/index.html
+++ b/sass_intro/index.html
@@ -1,18 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
 
-<h1>Lorem, ipsum.</h1>
+    <h1>Pagina di esempio SASS</h1>
 
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis tenetur cum cumque soluta, a id enim natus illo doloremque repellat ullam culpa dicta nihil possimus earum quidem eveniet labore dignissimos?</p>
-    
+
+
+    <ul class="menu">
+        <li>
+            <a class="active" href="#">Lorem.</a>
+        </li>
+        <li>
+            <a href="#">Ipsum.</a>
+        </li>
+        <li
+        ><a href="#">Dolor.</a>
+    </li>
+        <li>
+            <a href="#">Sit.</a>
+        </li>
+        <li class="specialMenuItem">
+            <a href="#">Amet.</a>
+        </li>
+    </ul>
+
+    <div id="hero">
+        <h1>Lorem, ipsum dolor.</h1>
+    </div>
+
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad aspernatur praesentium earum officiis molestiae minima totam dolorem doloremque non fugiat?</p>
+
+    <h2>Lorem, ipsum dolor.</h2>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam omnis amet debitis quod earum, inventore, doloribus consequatur eum rem soluta cum quibusdam explicabo commodi rerum? Reprehenderit numquam tempore dolorum odit dicta aut dolorem non recusandae facere adipisci, maiores fuga delectus?</p>
+
+
+    <a href="#" class="button">Cliccami!</a>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ea.</p>
+
+    <button class="send">Invia!</button>
+
 </body>
+
 </html>
