--- a/bootstrap_sass/index.html
+++ b/bootstrap_sass/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,17 +11,57 @@
     <!--                              GOOGLE FONTS                               -->
     <!-- ----------------------------------------------------------------------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700;900&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<h1>Hello World!</h1>
 
-    <a href="#" class="btn btn-primary">Click Me</a>
 
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <main class="main">
+        <div id="servizi">
+            <div class="servizio">
+                <h2>Lorem, ipsum.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi voluptatem fugit voluptatibus nobis enim. Corrupti quasi accusamus ullam nostrum quidem?</p>
+            </div>
+            <div class="servizio">
+                <h2>Lorem, ipsum.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi voluptatem fugit voluptatibus nobis enim. Corrupti quasi accusamus ullam nostrum quidem?</p>
+            </div>
+        
+            <div class="servizio">
+                <h2>Lorem, ipsum.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi voluptatem fugit voluptatibus nobis enim. Corrupti quasi accusamus ullam nostrum quidem?</p>
+            </div>
+        </div>
+ 
+
+    <div id="testimonial">
+
+        <div class="review">
+            <h2>Lorem, ipsum.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis animi itaque culpa sapiente aliquid dolor placeat hic voluptate architecto voluptatibus.</p>
+        </div>
+        <div class="review">
+            <h2>Quae, similique!</h2>
+            <p>At sapiente nulla dolore tenetur, eveniet rerum asperiores iste iure non ab quas! Aliquam blanditiis, voluptatem in possimus inventore sunt.</p>
+        </div>
+        <div class="review">
+            <h2>Eum, quod.</h2>
+            <p>Illum dolore minima quidem praesentium blanditiis quas beatae accusamus sequi optio, repellendus distinctio iusto dolorem, explicabo delectus. Laborum, sunt beatae.</p>
+        </div>
+        <div class="review">
+            <h2>Minima, qui?</h2>
+            <p>Exercitationem minus saepe praesentium quas ut eligendi cum temporibus, accusamus vel nobis illum facere numquam provident quisquam quaerat odit error?</p>
+        </div>
+        
+    </div>
+</main>
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
